final  responsive  commit

--- a/style.css
+++ b/style.css
@@ -328,6 +328,8 @@ footer{
     .about-spacio{
         margin-left: 25px;
     }
-    
+    .feature-section{
+        margin-left: 10px;
+    }
     
 }
